--- a/src/app/teammate-view/teammate/teammate.component.html
+++ b/src/app/teammate-view/teammate/teammate.component.html
@@ -1,6 +1,6 @@
 <div class="row list-group list-group-flush d-flex flex-row" [ngClass]="{'list-group-item': true, 'success': statusTeammate === 'Activer', 'failure': statusTeammate === 'Désactiver'}" [ngStyle]="{ opacity: getOpacityTeammate() }">
   <div class="col-1 m-auto">
-      <img src="../../../assets/images/profile.png">
+      <img src="src/assets/images/profile.png">
   </div>
   <div class="col-7 d-flex flex-row">
       <div class="m-auto">
